negaflow-windows/src/Native/abi/include/negaflow/abi/develop_entry.h

/* v22 runs the same recipe as v21 — the develop request did not change, so it keeps the
   v21 struct rather than minting an identical copy. What changed is that the caller can
   now steer the call: `run_state` may be null for the old blocking behaviour, or point at
   a pinned nf_develop_run_state_v1 to cancel the run and watch it advance. The result is
   v3 so cancellation is a field rather than a string comparison. */
NF_API nf_status_t NF_CALL nf_develop_export_v22(
    const nf_develop_export_request_v21* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v22(
    const nf_develop_export_request_v21* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
/* v23 is v22 plus a soft proof the caller may pass as null for an unproofed preview.
   There is no matching export entry point and there will not be one: soft proof is a
   viewing simulation, and a published artefact that carried it would be wrong.

   The develop request is still v21 — the recipe did not change, so no copy was minted. */
NF_API nf_status_t NF_CALL nf_develop_preview_v23(
    const nf_develop_export_request_v21* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
/* v24 replays optional IR attenuation before the referenced core repair. Both
   calls use the same request mapping and pre-develop native stage. */
NF_API nf_status_t NF_CALL nf_develop_export_v24(
    const nf_develop_export_request_v24* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v24(
    const nf_develop_export_request_v24* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
/* v25 preserves IR edit-item boundaries while retaining the v24 cluster ABI. */
NF_API nf_status_t NF_CALL nf_develop_export_v25(
    const nf_develop_export_request_v25* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v25(
    const nf_develop_export_request_v25* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v26(
    const nf_develop_export_request_v26* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v26(
    const nf_develop_export_request_v26* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v27(
    const nf_develop_export_request_v27* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v27(
    const nf_develop_export_request_v27* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v28(
    const nf_develop_export_request_v28* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v28(
    const nf_develop_export_request_v28* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v29(
    const nf_develop_export_request_v29* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v29(
    const nf_develop_export_request_v29* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v30(
    const nf_develop_export_request_v30* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v31(
    const nf_develop_export_request_v31* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v32(
    const nf_develop_export_request_v32* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v33(
    const nf_develop_export_request_v33* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v33(
    const nf_develop_export_request_v33* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v34(
    const nf_develop_export_request_v34* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v34(
    const nf_develop_export_request_v34* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_export_v35(
    const nf_develop_export_request_v35* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
/* Applies only the accepted non-IR defect recipe and publishes the linear RGB16 TIFF
   used to replace or repoint the source during application termination. */
NF_API nf_status_t NF_CALL nf_develop_bake_defects_v1(
    const nf_develop_export_request_v35* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v35(
    const nf_develop_export_request_v35* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
/* Publishes with the lab's own ICC profile when the request carries one. Everything
   else matches nf_develop_export_v35. Callers that publish into a named colour space
   keep using v35; there is nothing to gain from the wider struct. */
NF_API nf_status_t NF_CALL nf_develop_export_v37(
    const nf_develop_export_request_v37* request,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v31(
    const nf_develop_export_request_v31* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v30(
    const nf_develop_export_request_v30* request,
    const nf_soft_proof_v1* soft_proof,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_run_state_v1* run_state,
    nf_develop_export_result_v3* result);